# lab2llp

./: CMakeLists.txt  lab2_llp_report.docx  readme.md
grammar/: grammar.y  tokens.l
include/: ast.h  ast_node.h  common_stack.h  stack.h  variable_stack.h
src/: ast.c  ast_node.c  common_stack.c  main.c  stack.c
test/: ast.dot  test.txt
